Configure and render infos about breaks

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -25,6 +25,22 @@ body {
   background: hsla(204, 4%, 13%, 1);
 }
 
+.on-break {
+  text-align: center;
+}
+
+.break-date {
+  font-weight: bold;
+}
+
+.break-text {
+  margin-bottom: 8px;
+
+  &:empty {
+    display: none;
+  }
+}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
