--- a/views/partials/combined-menu-list.ejs
+++ b/views/partials/combined-menu-list.ejs
@@ -1,34 +1,47 @@
-<div class="card <%= restaurantName.toLowerCase() %> combined-menu-list">
+<% var restaurantNameLower = restaurantName.toLowerCase();%>
+<div class="card <%= restaurantNameLower %> combined-menu-list">
     <h3 class="card-header"><%= restaurantName %></h3>
     <div class="card-block">
-        <% if (menu != null && menu.closed){ %>
-        <div class="text-xs-center">
-            <i class="fa fa-bed fa-2x" aria-hidden="true"></i><br>
-            Heute leider geschlossen.
-        </div>
-        <% } else if (menu == null || menu.error) { %>
-        <div class="text-xs-center error">
-            <i class="fa fa-frown-o fa-2x fa-fw" aria-hidden="true"></i><br>
-            <p>Leider konnten wir die Daten nicht abrufen.</p>
-            <p>Sie sollten aber auf der <a href="<%= userFriendlyUrl(restaurantName.toLowerCase()) %>" target="_blank">Homepage
-                    des Restaurants</a> stehen.<br></p>
-            <p>Wir kümmern uns bald darum! <i class="fa fa-smile-o fa-fw" aria-hidden="true"></i></p>
+        <% var breakInfo = getBreakInfo(restaurantNameLower) %>
+        <% if(isOnBreak(breakInfo)) { %>
+        <div class="on-break">
+            <h5><%= breakInfo.title %></h5>
+            <p class="break-text"><%= breakInfo.text %></p>
+            <p class="break-date">
+                <%= breakInfo.from %> - <%= breakInfo.to %>
+            </p>
+            <i class="fa <%= breakInfo.icon %> fa-2x" aria-hidden="true"></i>
         </div>
         <% } else { %>
-        <% menu.mains.forEach(function(singleMenu, index){ %>
-            <% if (singleMenu.name && singleMenu.name.length) { %>
-                <% if(singleMenu.price != null && !singleMenu.isInfo) { %>
-                    <span class="label label-default label-pill price-pill pull-xs-right"><%= singleMenu.price + " €" %></span>
-                <% } %>
+            <% if (menu != null && menu.closed){ %>
+            <div class="text-xs-center">
+                <i class="fa fa-bed fa-2x" aria-hidden="true"></i><br>
+                Heute leider geschlossen.
+            </div>
+            <% } else if (menu == null || menu.error) { %>
+            <div class="text-xs-center error">
+                <i class="fa fa-frown-o fa-2x fa-fw" aria-hidden="true"></i><br>
+                <p>Leider konnten wir die Daten nicht abrufen.</p>
+                <p>Sie sollten aber auf der <a href="<%= userFriendlyUrl(restaurantNameLower) %>" target="_blank">Homepage
+                        des Restaurants</a> stehen.<br></p>
+                <p>Wir kümmern uns bald darum! <i class="fa fa-smile-o fa-fw" aria-hidden="true"></i></p>
+            </div>
+            <% } else { %>
+            <% menu.mains.forEach(function(singleMenu, index){ %>
+                <% if (singleMenu.name && singleMenu.name.length) { %>
+                    <% if(singleMenu.price != null && !singleMenu.isInfo) { %>
+                        <span class="label label-default label-pill price-pill pull-xs-right"><%= singleMenu.price + " €" %></span>
+                    <% } %>
 
-                <h5><%= getMensaMenuName(index, singleMenu) %></h5>
-                <ul class="list-group menu-list-group">
-                    <% singleMenu.name.forEach(function(menuItem){ %>
-                        <li class="list-group-item"><%= menuItem %></li>
-                    <% }); %>
-                </ul>
-                <% } %>
-            <% }); %>
+                    <h5><%= getMensaMenuName(index, singleMenu) %></h5>
+                    <ul class="list-group menu-list-group">
+                        <% singleMenu.name.forEach(function(menuItem){ %>
+                            <li class="list-group-item"><%= menuItem %></li>
+                        <% }); %>
+                    </ul>
+                    <% } %>
+                <% }); %>
+            <% } %>
         <% } %>
     </div>
 </div>
