--- a/public/styles/about.scss
+++ b/public/styles/about.scss
@@ -1,5 +1,27 @@
 /*about.scss*/
+$card-header-bg: rgba(0, 0, 0, 0.7);
+
 .about {
+  padding-top: 0.8rem;
+  .card {
+    border: none;
+  }
+
+  .about-us {
+    background: none;
+
+    .card-block {
+      background: white;
+      padding-top: 0.5rem;
+    }
+
+    .card-header {
+      margin-bottom: 0;
+      color: white;
+      background: $card-header-bg;
+    }
+  }
+
   .back-icon-container {
     text-align: center;
 
@@ -17,4 +39,27 @@
   .back-icon-container .card-block {
     padding-top: 1.1rem;
   }
+}
+
+.cat-fact-header {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+
+.cat-fact-header img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.cat-fact-header img.portrait {
+  width: 100%;
+  height: auto;
 }
