--- a/views/about.ejs
+++ b/views/about.ejs
@@ -20,17 +20,36 @@
                 <div class="card about-us">
                     <h3 class="card-header">Über uns</h3>
                     <div class="card-block">
-                        <p class="card-text">
-                            Diese Homepage ist ein Hobbyprojekt und steht in keinerlei Verbindung mit den angeführten
-                            Restaurants.
-                        </p>
-                        <p class="card-text">Allerlei Infos zum technischen Krimskrams findet ihr auf unserer
-                            <a
-                                    href="https://github.com/Knechtcraft/AAUFood"
-                                    style="white-space: nowrap;">
-                                <i class="fa fa-github" aria-hidden="true"></i>
-                                GitHub Projektseite
-                            </a>.
+                        <p class="card-text">Diese Homepage ist ein Hobbyprojekt und steht in
+                        keinerlei Verbindung mit den angeführten Restaurants. Damit sind die
+                        Formalitäten erledigt.</p>
+                        <p class="card-text">So ein Mittagessen kann schon was und man sollte
+                        nie auf eine anständige Mahlzeit zu Mittag verzichten. Die Studenten an
+                        der Alpen-Adria-Universität Klagenfurt haben es aber auch ziemlich gut
+                        mit dem Angebot rund um den Campus erwischt. Zahlreiche Mittagsmenüs
+                        werden tagtäglich angeboten, doch fehlt einem oft der Überblick. Wann
+                        gibt es wo was? Da muss man dann schon jede Website abklappern und sich
+                        dann auch noch irgendwie das Angebot merken und wie viel es kostet. Zum
+                        Glück war ein paar Informatikern recht langweilig und sie haben dieses
+                        Problem ganz einfach, still und leise gelöst. Auf [[food.felf.ga]]
+                        findet man die aktuellen Mittagsmenüs von Lokalen am Campus und das
+                        Vergleichen fällt ganz leicht. So kommt man noch schneller und leichter
+                        zu einem wohlverdienten Mittagessen. Es wird noch fleißig an der
+                        Ergänzung der Lokale gearbeitet – wenn ihr allerdings etwas ganz fest
+                        vermisst, schreibt einfach eine Nachricht an knechtcraft@gmail.com und
+                        wir tun unser bestes eure Wünsche zu erfüllen. Also Mahlzeit und lasst
+                        es euch schmecken!</p>
+                        <p class="card-text">Hinter dem Projekt stehen Fabian, Markus und
+                        Kristina. Auf Kristinas Jammern hin, dass es so umständlich ist das
+                        beste Mittagessen zu finden, war die Grundidee geboren. Fabian und
+                        Markus, die besagten Informatiker, haben nicht lange gebraucht und
+                        schon kommt die ganze AAU in den Genuss von [[food.felf.ga]].</p>
+                        <p class="card-text">Allerlei Infos zum technischen Krimskrams findet
+                        ihr auf unserer 
+                        <a href="https://github.com/Knechtcraft/AAUFood" style=
+                        "white-space: nowrap;">
+                            <i aria-hidden="true" class="fa fa-github"></i>
+                        GitHub Projektseite</a>.
                         </p>
                     </div>
                 </div>
