--- a/views/partials/weekday-menu.ejs
+++ b/views/partials/weekday-menu.ejs
@@ -1,7 +1,7 @@
 <% day = day % 7 %>
 <div class="weekday-container">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4 weekday-header">
+        <div class="col-lg-4 col-lg-offset-4 weekday-header">
             <span class="weekday">
                 <span class="nav-icon left top pull-left">
                     <i class="fa fa-angle-left" aria-hidden="true"></i>
@@ -14,13 +14,13 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-lg-4">
             <%- include('combined-menu-list', {restaurantName: 'Mensa', menu: mensa ? mensa[day] : null}) %>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4">
             <%- include('menu-list', {restaurantName: 'Uniwirt', menu: uniwirt ? uniwirt[day] : null}) %>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4">
             <%- include('menu-list', {restaurantName: 'Mittagstisch', menu: mittagstisch ? mittagstisch[day] : null}) %>
         </div>
     </div>
