fixed padding in about page

--- a/public/styles/about.scss
+++ b/public/styles/about.scss
@@ -3,6 +3,10 @@ $card-header-bg: rgba(0, 0, 0, 0.7);
 
 .about {
   padding-top: 0.8rem;
+
+  padding-left: .9375rem;
+  padding-right: .9375rem;
+
   .card {
     border: none;
   }
