--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
         </span>
 </div>
 
-<div class="container">
+<div class="container-fluid menu-container">
     <div id='slider' class='swipe'>
         <div class='swipe-wrap'>
             <% for(var d = 0; d < 7; d++) { %>
