--- a/views/partials/combined-menu-list.ejs
+++ b/views/partials/combined-menu-list.ejs
@@ -1,4 +1,4 @@
-<% var restaurantNameLower = restaurantName.toLowerCase();%>
+<% var restaurantNameLower = restaurantName.replace(" ", "-").toLowerCase(); %>
 <div class="card <%= restaurantNameLower %> combined-menu-list">
     <h3 class="card-header"><%= restaurantName %></h3>
     <div class="card-block">
