Uni Pizzeria --> Uni-Pizzeria

--- a/views/partials/weekday-menu.ejs
+++ b/views/partials/weekday-menu.ejs
@@ -24,7 +24,7 @@
             <%- include('menu-list', {restaurantName: 'Mittagstisch', menu: mittagstisch ? mittagstisch[day] : null}) %>
         </div>
         <div class="col-lg-3">
-            <%- include('menu-list', {restaurantName: 'Uni Pizzeria', menu: uniPizzeria ? uniPizzeria[day] : null}) %>
+            <%- include('menu-list', {restaurantName: 'Uni-Pizzeria', menu: uniPizzeria ? uniPizzeria[day] : null}) %>
         </div>
     </div>
 </div>
