phylib fixed position of cookie-bar :-)

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -312,3 +312,8 @@ html, body {
     }
   }
 }
+
+.cc_banner.cc_container.cc_container--open {
+  bottom: $footerHeight;
+  background-color: rgba(0,0,0,0.7);
+}
