phylib fixed footer so that cookie-bar does not look terrible.

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -162,7 +162,8 @@ body {
 
 /*Footer*/
 .footer {
-  position: relative;
+  position: fixed;
+  z-index: 9002;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
