--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
+<div id="cookieConsentHolder"></div>
 <footer class="footer">
     <span class="daily-counter" title="Besucher heute">
         <i class="fa fa-fw fa-clock-o" aria-hidden="true"></i>
