adapt link colors

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -141,6 +141,10 @@ body {
   .sk-folding-cube .sk-cube:before {
     background-color: $bgColor;
   }
+
+  .link-icon {
+    color: transparentize($fontColor, 0.25);
+  }
 }
 
 .mittagstisch {
