--- a/views/partials/combined-menu-list.ejs
+++ b/views/partials/combined-menu-list.ejs
@@ -2,7 +2,7 @@
 <div class="card <%= restaurantNameLower %> combined-menu-list">
     <h3 class="card-header">
 	<%= restaurantName %>
-        <a href="<%= userFriendlyUrl(restaurantNameLower) %>">
+        <a class="link-icon" href="<%= userFriendlyUrl(restaurantNameLower) %>">
 	    <span class="fa fa-globe pull-right" aria-hidden="true"></span>
 	</a>
     </h3>
