Fixed Uni-Pizzeria link bug // No transparency on link:hover

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -144,6 +144,10 @@ body {
 
   .link-icon {
     color: transparentize($fontColor, 0.25);
+
+    &:hover {
+      color: transparentize($fontColor, 0);
+    }
   }
 }
 
