Link to Impressum // Included Philipp and Benjamin in about page

--- a/public/styles/about.scss
+++ b/public/styles/about.scss
@@ -45,10 +45,6 @@ $card-header-bg: rgba(0, 0, 0, 0.7);
   }
 }
 
-.about-name a {
-  color: inherit;
-}
-
 .cat-fact-header {
   position: relative;
   width: 100%;
@@ -73,6 +69,10 @@ $card-header-bg: rgba(0, 0, 0, 0.7);
 }
 
 @mixin name($color) {
+  &.a {
+    color: inherit;
+  }
+
   color: $color ;
   font-weight: bold;
 }
@@ -82,11 +82,19 @@ $card-header-bg: rgba(0, 0, 0, 0.7);
 }
 
 #fabian {
-  @include name(#09B22E);
-}
+   @include name(#09B22E);
+ }
 
 #markus {
   @include name(#4B09B2);
+}
+
+#benjamin {
+  @include name(#D61800);
+}
+
+#philipp {
+  @include name(#3f77d8);
 }
 
 .nowrap {
