--- a/views/about.ejs
+++ b/views/about.ejs
@@ -29,7 +29,7 @@
                         <p class="card-text">
                             Hinter dem Projekt stehen <span id="name0"><span id="fabian">Fabian</span></span>, <span id="name1"><span id="markus">Markus</span></span> und <span id="name2"><span id="kristina">Kristina</span></span>. Auf Kristinas Jammern hin, dass es so umständlich ist, das beste Mittagessen zu finden, war die Grundidee geboren. Fabian und Markus, die besagten Informatiker, haben nicht lange gebraucht und schon kommt die ganze AAU in den Genuss von
                             <a class="nowrap" href="/">
-                                <i class="fa fa-cutlery" aria-hidden="true"></i> AAU Food</a>.
+                                <i class="fa fa-cutlery" aria-hidden="true"></i> AAU Food</a>. Mit der Zeit haben auch <span id="additionalName0"><span id="behackl">Benjamin</span></span> und <span id="additionalName1"><span id="philipp">Philipp</span></span> Wind von der Sache bekommen und fleißig  mit angepackt.
                         </p>
                         <p class="card-text">Allerlei Infos zum technischen Krimskrams findet ihr auf unserer
                             <a class="nowrap" href="https://github.com/Knechtcraft/AAUFood">
