--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,6 @@
+<!--<div id="impressumHolder">
+    <a href="https://www.felf.io/about.html" id="impressum" class="label label-dark label-pill">Impressum</a>
+</div>-->
 <div id="cookieConsentHolder"></div>
 <footer class="footer">
     <span class="daily-counter" title="Besucher heute">
@@ -5,12 +8,12 @@
         <span id="dailyVisitors"><%= visitorStats.dailyVisitors %></span>
     </span>
 
-    <%- getFooterPun() %>
-
-    <span class="overall-counter" title="Besucher gesamt">
-         <%= visitorStats.overallVisitors %>
-        <i class="fa fa-fw fa-calendar-o" aria-hidden="true"></i>
+    <span class="footer-pun">
+        <%- getFooterPun() %>
     </span>
+    <a class="impressum" title="Impressum" href="https://www.felf.io/about.html">
+        Impressum
+    </a>
 </footer>
 
 <script src="/dist/bundle.js"></script>
