--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,8 +11,9 @@
     <span class="footer-pun">
         <%- getFooterPun() %>
     </span>
-    <a class="impressum" title="Impressum" href="https://www.felf.io/about.html">
+    <a class="impressum-link" title="Impressum" href="https://www.felf.io/about.html">
         Impressum
+        <i class="fa fa-fw fa-balance-scale" aria-hidden="true"></i>
     </a>
 </footer>
 
