added some meta tags for social networks

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Some meta-tags for social networks -->
+    <meta property="og:url" content="https://food.felf.io">
+    <meta property="og:title" content="felfio - AAUFood">
+    <meta property="og:description" content="Essensauswahl leicht gemacht! food.felf.io hilft beim Vergleich der angebotenen Mittagsmenüs ausgewählter Restaurants rund um die Alpen-Adria-Universität Klagenfurt.">
+    <meta property="og:image" content="https://food.felf.io/favicons/fav_192.png">
+
     <title><%= title ? title : "AAU Food" %></title>
 
     <link rel="icon" sizes="192x192" href="favicons/fav_192.png">
