Knechtcraft goes Felfio

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -32,7 +32,7 @@
                                 <i class="fa fa-cutlery" aria-hidden="true"></i> AAU Food</a>. Mit der Zeit haben auch <span id="additionalName0"><span id="behackl">Benjamin</span></span> und <span id="additionalName1"><span id="philipp">Philipp</span></span> Wind von der Sache bekommen und fleißig  mit angepackt.
                         </p>
                         <p class="card-text">Allerlei Infos zum technischen Krimskrams findet ihr auf unserer
-                            <a class="nowrap" href="https://github.com/Knechtcraft/AAUFood">
+                            <a class="nowrap" href="https://github.com/Felfio/AAUFood">
                                 <i aria-hidden="true" class="fa fa-github"></i> GitHub Projektseite</a>.
                         </p>
                     </div>
