--- a/views/partials/weekday-menu.ejs
+++ b/views/partials/weekday-menu.ejs
@@ -14,16 +14,16 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xl-3">
+        <div class="col-xl-3 col-lg-6 col-md-12">
             <%- include('combined-menu-list', {restaurantName: 'Mensa', menu: mensa ? mensa[day] : null}) %>
         </div>
-        <div class="col-xl-3">
+        <div class="col-xl-3 col-lg-6 col-md-12">
             <%- include('menu-list', {restaurantName: 'Uniwirt', menu: uniwirt ? uniwirt[day] : null}) %>
         </div>
-        <div class="col-xl-3">
+        <div class="col-xl-3 col-lg-6 col-md-12">
             <%- include('menu-list', {restaurantName: 'Mittagstisch', menu: mittagstisch ? mittagstisch[day] : null}) %>
         </div>
-        <div class="col-xl-3">
+        <div class="col-xl-3 col-lg-6 col-md-12">
             <%- include('menu-list', {restaurantName: 'Uni-Pizzeria', menu: uniPizzeria ? uniPizzeria[day] : null}) %>
         </div>
     </div>
