--- a/views/partials/combined-menu-list.ejs
+++ b/views/partials/combined-menu-list.ejs
@@ -23,6 +23,13 @@
                 <i class="fa fa-bed fa-2x" aria-hidden="true"></i><br>
                 Heute leider geschlossen.
             </div>
+	    <% } else if (menu != null && menu.outdated){ %>
+            <div class="text-xs-center">
+                <i class="fa fa-calendar-times-o fa-3x" aria-hidden="true"></i><br><br>
+                Das Lokal hat das aktuelle Wochenmenü noch nicht auf seiner
+                <a href="<%= userFriendlyUrl(restaurantNameLower) %>" target="_blank">Homepage</a>
+                veröffentlicht!
+            </div>
             <% } else if (menu == null || menu.error) { %>
             <div class="text-xs-center error">
                 <i class="fa fa-frown-o fa-2x fa-fw" aria-hidden="true"></i><br>
