--- a/views/partials/menu-list.ejs
+++ b/views/partials/menu-list.ejs
@@ -25,8 +25,10 @@
             </div>
             <% } else if (menu != null && menu.outdated){ %>
             <div class="text-xs-center">
-                <i class="fa fa-calendar-times-o fa-3x" aria-hidden="true"></i><br>
-                Das Lokal hat das aktuelle Wochenmenü noch nicht auf seiner Homepage veröffentlicht!
+                <i class="fa fa-calendar-times-o fa-3x" aria-hidden="true"></i><br><br>
+                Das Lokal hat das aktuelle Wochenmenü noch nicht auf seiner
+                <a href="<%= userFriendlyUrl(restaurantNameLower) %>" target="_blank">Homepage</a>
+                veröffentlicht!
             </div>
             <% } else if (menu == null || menu.error) { %>
             <div class="text-xs-center error">
